Deployment: Prepared backend and frontend for Render environment variables and production CORS